tests/ui/parser/import_invalid_token.sol
//~? ERROR: unknown start of token: #

import "./auxiliary/invalid_token.sol";
